testsuite/tests/builtins/str_methods/ends_with/missing_param/test.out
Error: No value for parameter
   ╭─[ <working-dir>/script.lkql:1:7 ]
   │
 1 │ print("Hello World".ends_with())
   │       ────────────┬────────────  
   │                   ╰────────────── Missing value for the "suffix" parameter
───╯
